src/styles/components/footer.scss
footer {
  margin-top:10px;

  .main-footer {
    padding:50px 0;
    background:$footer-bg; // $footer-bg

    .footer-blocks {
      font-family:$base-font-family;
      display:flex;
      flex-direction: row;
      flex-wrap: nowrap;
      border-bottom: 1px solid #828998;

      @media screen and(max-width: $x-small) {
        display: block;
      }

      .footer-block.img-block {
        width:30%;
        padding-top: 70px;
        padding-left:0;
        height:170px;
        border-right:1px solid $footer-link-color;
       // margin-left:-50px;

        @media screen and(max-width: $x-small) {
          width: 100%;
          text-align: center;
          border-right:unset;
          border-bottom:1px solid $footer-link-color ;
          margin-bottom: 20px;
        }

      }

      .footer-block {
        padding:20px;
        //border:1px solid red;
        width:20%;

        .block-title {
          color:#fff;
          font-size:16px;
          font-weight: bold;
        }

        .separator {
          height:2px;
          width:30%;
          background: $primary;
          display:block;
          margin-bottom: 10px;

          @media screen and(max-width: $x-small) {
            width:100%;
            display: in;
          }

        }

        .links {
          a { color:$footer-link-color; font-size:14px; }
        }

        &:last-child {
          padding-right: 0;
          margin-right: -60px;
        }

        @media screen and(max-width: $x-small) {
          display: inline-block;
          text-align: center;
          width:49%;
          vertical-align: top;
        }

      }

    }

    .risk-warning-box {
      font-family: $base-font-family;
      font-size:12px;
      margin-top:20px;
      color:$footer-link-color;
      text-align:justify;
      .risk-warning {
        font-weight: bold;
      }
    }

  }

  .bar {
    position: relative;
    background:$primary;
    z-index: -1;
    height:87px;
    width:100%;

    .container {
      position: relative;
    }

    .carsifx-mobile-img {
      position: absolute;
      z-index: 1;
      bottom: -510px;
      // left: 550px;
      right:0;

      @media screen and (max-width:$x-small) {
        display: block;
        bottom:-350px;
      }

    }
  }

  .bar.hide-phone {
    .carsifx-mobile-img {
      display: none;
    }
  }

  .footer-bottom {
    position: relative;
    z-index: 1;
    padding:20px;
    background: $footer-bottom;

    @media screen and (max-width:$x-small) {
      padding:0;
      .col-lg-9 { padding:0; }
    }

    .contact-info {
      font-family: $base-font-family;
      // font-size:12px;
      margin-top:10px;
      color:$footer-link-color;
      margin-left:-20px;

      li {
        display: inline-block;
        padding:0 5px;
        font-size:12px;
        @media screen and (max-width:$x-small) {
          padding:0;
        }
      }

      .text {
        display:inline-block;
        margin-top:-10px;
      }

      .icon-separator {
        display:inline-block;
        width:50px;
        border-right:1px solid $footer-link-color;
        margin-right: 10px;
        text-align: center;
      }

      .contact-icon {
        font-size:18px;
        color:$primary;
      }

      @media screen and (max-width:$x-small) {
        margin:30px 0;
      }

    }



    .social-links {
      text-align: right;
      a {
        display:inline-block;
        padding:0 20px;
        font-size:25px;
        &:last-child {
          padding-right:0;
        }
      }

      @media screen and (max-width:$x-small) {
        text-align: center;
        margin:30px 0;
      }

    }

  }

}

